# offline_production

./: .clang-format  .gitignore  LICENSE  README.md
clsim/cudaKernels/: CLnoneCUDA.cuh  CMakeLists.txt  I3CLSimCUDADevice.cu  cudaStep.cuh  dataStructCuda.cuh  domGeoData.cuh  geometrySource.cuh  helper_math.h  mathstuff.cuh  mediumPropertiesSource.cuh  mwcrngKernelSource.cuh  plotPhotons.py  prependSource.cuh  propagationKernelFunctions.cuh  propagationKernelSource.cu  propagationKernelSource.cuh  reference.cuh  rng.cuh  scatteringAndAbsorbtionData.cuh  settings.cuh  utils.cuh  wlenBiasSource.cuh  wlenGeneration.cuh  wlenGeneratorSource.cuh  zOffsetHandling.cuh
clsim/cudaKernels/optixSrc/: CMakeLists.txt  README_OPTIX_DATA.txt  common.cpp  common.h  io_utils.hpp  optixKernels.cu  params.hpp  pillGeometry.py  rtxFunctions.cpp  rtxFunctions.hpp  spheresGeometry.py  stringsGeometry.py  tiny_obj_loader.h
photospline/: .gitignore  .mailinglist  CMakeLists.txt  RELEASE_NOTES
photospline/private/cfitter/: cholesky_solve.c  cholesky_solve.h  glam.c  glam.h  nnls.c  pyglam.c  splineutil.c  splineutil.h
photospline/private/lib/: I3SplineTable.cxx  bspline.c  bspline_multi.c  convolve.c  fitstable.c  splinepdf.c
photospline/private/pybindings/: I3SplineTable.cxx  module.cxx
photospline/private/test/: main.cxx  test_bounds.cxx
photospline/private/util/: dumpsplinefits.c  evalsplinefits.c
photospline/public/photospline/: I3SplineTable.h  bspline.h  splinepdf.h  splinetable.h
photospline/python/: __init__.py  numpy_extensions.py  photonics.py  splinefitstable.py  splinetable.py  utils.py
photospline/python/glam/: __init__.py  bspline.py  convolve.py  glam.py  glamhist.py  nnls.py
photospline/resources/docs/: index.rst
photospline/resources/scripts/: bsplinefit.py  bsplineinterp.py  bsplinetest.py  cluster-photospline.sh  glam-photonics-spherical.py  glam-photonics.py  glam-photoverify.py  glam-test.py  kyrre.py  pbsplinetest.py  photoadd.py  stack-photonics.py
photospline/resources/test/: deriv2.py  find_pyfits.py  test_cfitter.py
ppc/: .mailinglist  CMakeLists.txt  RELEASE_NOTES
ppc/private/ppc/: I3CLSimStepToPhotonConverterPPC.cxx  I3CLSimStepToPhotonConverterPPC.h  i3ppc.cxx  ppc.h  pybindings.cxx
ppc/private/ppc/bfr/: Makefile  bfr.cxx
ppc/private/ppc/llh/: Makefile  ico.cxx  inv.cxx  llh.cxx  lssl.cxx  nnls.cxx  ppc.h  src
ppc/private/ppc/ocl/: Makefile  f2k.cxx  ini.cxx  ppc.cxx  pro.cxx  src
ppc/python/: __init__.py
ppc/resources/docs/: index.rst  llh_manual_2013.rst  ppc_manual_2010.rst
ppc/resources/examples/: clsim_interface.py
ppc/resources/ice/: README  as.HD  as.null  bad-f2k  cfg.ori  eff-f2k  eff-f2k.rde  hvs-f2k  rnd.txt  wv.450  wv.505
ppc/resources/scripts/: flasher_data.py  generate_flashers.py  get_hits_llh.py  propagate_photons.py  simple_example.py  tilt2JSON.py
simprod-scripts/: .mailinglist  CMakeLists.txt  RELEASE_NOTES
simprod-scripts/python/: ipmodule.py  weights.py
simprod-scripts/python/certify/: CheckPhotonTables.py  CheckResource.py  GeneratePhotonTables.py  MonitorSysChkJobs.py  checkgrid.py  checkgrid_N.py  checkgrid_withlogs.py
simprod-scripts/python/jcorsika/: README  __init__.py  corsika.py  corsika_binary.py  corsika_builder.py  corsika_stage.py  simprod.py
simprod-scripts/python/jcorsika/corsika_options/: __init__.py  atmosphere_option.py  coconut_options.py  compilation_option.py  corsika_options.py  deprecated_options.py  execution_option.py  get_version.py  high_energy_hadronic_model_option.py  low_energy_hadronic_model_option.py  option.py  parameters_option.py  thinning_option.py
simprod-scripts/python/jcorsika/tests/: test.py
simprod-scripts/python/modules/: __init__.py  clsim.py  corsika.py  datatransfer.py  dcorsika.py  detectors.py  genie.py  icetop.py  muongun.py  noisetriggers.py  nugen.py  polyplopia.py  ppc.py  proposal.py  simple_cascade.py  simple_muon.py
simprod-scripts/python/segments/: Calibration.py  DetectorSim.py  GenerateAirShowers.py  GenerateCosmicRayMuons.py  GenerateFlashers.py  GenerateIceTopShowers.py  GenerateNeutrinos.py  GenerateNoiseTriggers.py  HybridPhotonicsCLSim.py  MultiDomEffSample.py  PPC.py  Polyplopia.py  PropagateMuons.py  __init__.py
simprod-scripts/python/util/: __init__.py  arguments.py  corsika_binary.py  corsika_binary_stager.py  deposited_energy.py  fetch_corsika_tarballs.py  fileutils.py  gaussSpreadDOMeff.py  modifyevent.py  simprodtray.py  splitter.py
simprod-scripts/resources/docs/: corsika_tarballs.rst  examples.rst  index.rst  ipmodule.rst  modules.rst  production_test.rst  scripts.rst  segments.rst
simprod-scripts/resources/docs/examples/: fullSimulation.rst
simprod-scripts/resources/docs/modules/: clsim.rst  corsika.rst  detectors.rst  genie.rst  icetop.rst  muongun.rst  nugen.rst  ppc.rst
simprod-scripts/resources/docs/segments/: detector.rst  muongun.rst  proposal.rst
simprod-scripts/resources/examples/: ReTrigger.py  flasherFullSimulation.py  fullSimulation.py  merge_bg_mcpes.py  photon_syst.py  repoly.py
simprod-scripts/resources/scripts/: clsim.py  corsika.py  corsika5comp.py  detector.py  fixcorsikaweights.py  icetopshowergenerator.py  muongun.py  noise.py  nugen.py  polyplopia.py  ppc.py  resampleclsim.py  resampleppc.py  simplecascade.py  startingmuon.py
simprod-scripts/resources/scripts/SnowSuite/: 1-process-Gen.py  2-Polyplopia.py  2-Propagate.py  3-Snowstorm.py  Snowstorm_Cfg.yml  Snowstorm_FullSystematics.yml  Snowstorm_NominalIce_Cfg.yml
simprod-scripts/resources/scripts/SnowSuite/demo/: SimpleInjector.py
simprod-scripts/resources/scripts/SnowSuite/iceprod2/: iceprod_config_example.json  (+1 more)
simprod-scripts/resources/scripts/jcorsika/: corsika.py  corsika_env.sh  make_corsika_tarball.py
simprod-scripts/resources/scripts/monopole/: README.txt  mmact_gen_prop_trigg.py  mmact_utils.py  mmact_wrap_gen_prop_trigg.sh
simprod-scripts/resources/tests/: i3eventheader_test.py
simprod-scripts/resources/tests/generators/: mgun-dc.py  mgun.py  nugen-generator.py
simprod-scripts/resources/tests/segments/: nugen.py
(+1687 files in other folders)
